email 전송 가능/password 변경 이슈 수정중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,18 @@ spring:
       hibernate:
         #        show_sql: true sysout으로 출력된다.
         format_sql: true
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: jth0602@gmail.com
+    password: qmyulnhfjycqsoau
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 logging:
   level:
     org.hibernate.SQL: debug
