--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: jth0602@gmail.com
-    password: qmyulnhfjycqsoau
+    username: -
+    password: -
     properties:
       mail:
         smtp:
