--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,11 @@ spring:
       hibernate:
         #        show_sql: true sysout으로 출력된다.
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
   mail:
     host: smtp.gmail.com
-    port: 587
+    port: 465
     username: crowdee.funding@gmail.com
     password: zuglkxuwfejpcunv
     properties:
