컨트롤러,서비스,테스트 부분변경 회원가입,로그인,비번번호찾기,비밀번호변경,패스워드검증,회원정보수정,이메일인증,회원탈퇴

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
   mail:
     host: smtp.gmail.com
-    port: 465
+    port: 587
     username: crowdee.funding@gmail.com
     password: zuglkxuwfejpcunv
     properties:
@@ -24,9 +24,9 @@ spring:
           auth: true
           starttls:
             enable: true
-          ssl:
-            trust: stmp.gmail.com
-            protocols: TLSv1.2
+#          ssl:
+#            trust: stmp.gmail.com
+#            protocols: TLSv1.2
 
 logging:
   level:
